data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_1.wast
;; 2. **Test for Zero Targets in `br_table`**:    - Use a `br_table` inside a block with zero targets and an index of zero.    - *Constraint*: Ensures proper handling of `br_table` instructions with no targets.    - *Relation*: Tests how both implementations manage label stack shifts and handle the scenario of no available target labels.

(assert_invalid
  (module (func (block (block (br_table 0 (i32.const 0))) (i32.const 1) (drop))))
  "label index out of range"
)